# mysqlpp

./: .cvsignore  .gitignore  Bakefiles.bkgen  CMakeLists.txt  CREDITS  CREDITS.txt  ChangeLog  Configure  HACKERS  HACKERS.txt  Makefile.am  Makefile.in  README  README-Linux.txt  README-Mac-OS-X.txt  README-MinGW.txt  README-Solaris.txt  README-Unix.txt  README-Visual-C++.txt  README-examples.txt  README.bc  README.examples  README.mingw  README.txt  README.unix  README.vc  README.vc++  Wishlist  abi.xml.in  aclocal.m4  bmark.txt  bootstrap  bootstrap.bat  checkvc8  cleanmf  common.am  configure  configure.ac  configure.in  do-upload  (+20 more)
config/: mysql++.m4  mysql_loc.m4  socket_nsl.m4
devel/: driver.h  driver2.h
doc/: html.sty  manual.ps  manual.tex  manual.toc  mysql.tex  ssqls-pretty
doc/html/refman/: refman.css
doc/html/userman/: tangentsoft.css
doc/man-html/: 1_Introduction.html  2_Overview.html  3_Important.html  4_Tutorial.html  5_Class.html  7_Specialized.html  A_Changelog.html  B_Do.html  Contents.html  index.html  internals.pl
doc/man-text/: 1_Introduction.txt  2_Overview.txt  5_Class.txt  8_Long.txt  A_Changelog.txt  B_Do.txt  C_Credits.txt  Introductory_Material.txt  Usage.txt  manual.txt
doc/old/: const.tex  manual.aux  manual.dvi  subscript.tex
doc/old/man-html/: 6_Template.html  8_Long.html  About_this.html  Appendices.html  C_Credits.html  D_Copyright.html  E_Feedback.html  Introductory_Material.html  Usage.html  WARNINGS  labels.pl
doc/old/man-text/: 3_Important.txt  4_Tutorial.txt  6_Template.txt  7_Specialized.txt  About_this.txt  Appendices.txt  Contents.txt  D_Copyright.txt  E_Feedback.txt
doc/refman/html/: refman.css
doc/userman/: Makefile  Makefile.hello  Makefile.hello.mingw  Makefile.hello.posix  README  README.txt  breakages.dbx  common.xsl  configuration.dbx  findxsl  fo.xsl  fo.xsl.in  fo2pdf  html.xsl  incorporating.dbx  intro.dbx  lgpl.xml  licenses.dbx  overview.dbx  ssqls.dbx  threads.dbx  tquery.dbx  tutorial.dbx  unicode.dbx  userman.dbx  userman.dbx.in  userman.xml
doc/userman/html/: userman.css
examples/: .cvsignore  Makefile  Makefile.am  Makefile.base  Makefile.bc  Makefile.gcc  Makefile.in  Makefile.mingw  Makefile.simple  Makefile.vc  README  att_getopt.cpp  att_getopt.h  cgi_image.bpr  cgi_image.cc  cgi_image.cpp  cgi_image.vcproj  cgi_jpeg.cpp  cmdline.cpp  complic1.bpr  complic1.cc  complic1.cpp  complic1.vcproj  cpool.cpp  cpoolp.cpp  cpoolw.cpp  custom1.cc  custom1.cpp  custom1.vcproj  custom2.cc  custom2.cpp  custom2.vcproj  custom3.cc  custom3.cpp  custom3.vcproj  custom4.cc  custom4.cpp  custom4.vcproj  custom5.cpp  custom5.vcproj  (+70 more)
examples/vstudio/: mysqlpp_vstudio.sln  util.cpp  util.h
examples/vstudio/mfc/: mfc.cpp  mfc.h  mfc.rc  mfc.vcproj  mfc_dlg.cpp  mfc_dlg.h  resource.h
examples/vstudio/mfc/res/: mfc.rc2
examples/vstudio/wforms/: MainForm.h  wforms.vcproj
lib/: .cvsignore  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.base  Makefile.bc  Makefile.in  Makefile.mingw  Makefile.simple  Makefile.vc  autoflag.h  bad_query.h  beemutex.cpp  beemutex.h  cmdline.cpp  cmdline.h  coldata.cc  coldata.cpp  coldata.h  coldata3.hh  common.h  compare.h  connection.cc  connection.cpp  connection.h  connection1.hh  const_string.h  convert.h  convert1.hh  cpool.cpp  cpool.h  custom.pl  datetime.cc  datetime.cpp  datetime.h  datetime1.hh  datetime2.hh  dbdriver.cpp  dbdriver.h  (+111 more)
ssx/: genv2.cpp  main.cpp  parsev2.cpp  parsev2.h
test/: array_index.cpp  cpool.cpp  datetime.cpp  insertpolicy.cpp  null_comparison.cpp  qssqls.cpp  sqlstream.cpp  string.cpp  tcp.cpp  test_datetime.cpp  test_manip.cpp  test_string.cpp  test_tcp.cpp  test_uds.cpp  test_wnp.cpp  uds.cpp
